working with class

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 		<div class="counter-2"></div>
 
 		<!-- <script src="./script.js"></script> -->
-		<script src="./Header.js"></script>
+		<!-- <script src="./Header.js"></script>
 		<script src="./Button.js"></script>
 		<script src="./counter.js"></script>
 		<script src="./DecreasingCounter.js"></script>
-		<script src="./myOwnNew.js"></script>
+		<script src="./myOwnNew.js"></script> -->
+
+        <script src="./class.js"></script>
 
 		<script>
 			        /*
@@ -32,12 +34,8 @@
 			             counter2.init
                          **/
                          
-     const person = myOwnNew(Person, 'Derek', 25)
-     person.sayHello()
-     const counter = myOwnNew(Counter, '.counter-1')
-     counter.init()
-     const counter2 = myOwnNew(DecreasingCounter, '.counter-2')
-     counter2.init()
+   
+    
 		</script>
 	</body>
 </html>
